test/tornado-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tornado-app-service
spec:
  selector:
    app: tornado-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
